rsyslog (4.6.3-1) UNRELEASED; urgency=low

  * New upstream release.
  * debian/patches/02-set-correct-default-for-buffered-writing.patch
    - Removed, merged upstream.
  * Switch to source format 3.0 (quilt)
    - Add debian/source/format.
    - Drop Build-Depends on quilt.
    - Remove debian/README.source.
    - Remove /usr/share/quilt/quilt.make include from debian/rules.

 -- Michael Biebl <biebl@debian.org>  Wed, 07 Jul 2010 15:40:46 +0200

rsyslog (4.6.2-1) unstable; urgency=low

  * New upstream release.
  * debian/patches/02-set-correct-default-for-buffered-writing.patch
    - The default for $OMFileFlushOnTXEnd was wrong ("off"). Patch pulled from
      upstream Git.

 -- Michael Biebl <biebl@debian.org>  Wed, 07 Apr 2010 16:42:56 +0200

rsyslog (4.6.1-1) unstable; urgency=low

  * New upstream release.
    - Fix error in rsyslog.conf(5) man page. The configuration variable
      $InputUDPServerRun does not exist, it should be $UDPServerRun instead.
      Thanks to Alexander Gerasiov for spotting this. Closes: #571202
  * debian/rsyslog-doc.install
    - Install png image files.
  * debian/patches/doc_typo_fix.patch
    - Removed, merged upstream.
  * debian/patches/no_create_db.patch
    - Refresh to apply cleanly.
  * debian/control
    - Bump Standards-Version to 3.8.4. No further changes.
  * debian/rsyslog.install
    - Install new lmstrmsrv.so and lmzlibw.so plugins.
  * debian/rsyslog.lintian-overrides
    - Add lintian override for init.d-script-missing-dependency-on-remote_fs
      false positive. See also the corresponding lintian bug: #571280.
  * debian/rules
    - Add call to dh_lintian.
  * debian/rsyslog.init
    - GNU/kFreeBSD does not allow to create pipes in /dev. So for xconsole
      create the pipe as /var/run/xconsole and a /dev/xconsole symlink.
      Closes: #537170

 -- Michael Biebl <biebl@debian.org>  Fri, 05 Mar 2010 01:07:53 +0100

rsyslog (4.4.2-2) unstable; urgency=low

  * debian/control