@@ -1,41 +1,10 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# debian/rules file for the rsyslog package.
-# Author: Michael Biebl <biebl@debian.org>
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+%:
+	dh $@ --with autotools_dev
 
-# This has to be exported to make some magic below work.
-export DH_OPTIONS
-
-# These are used for cross-compiling and for saving the configure script
-# from having to guess our platform (since we know it already)
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-config.status: $(QUILT_STAMPFN) configure
-	dh_testdir
-	# Add here commands to configure the package.
-ifneq "$(wildcard /usr/share/misc/config.sub)" ""
-	cp -f /usr/share/misc/config.sub config.sub
-endif
-ifneq "$(wildcard /usr/share/misc/config.guess)" ""
-	cp -f /usr/share/misc/config.guess config.guess
-endif
-	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
-		--prefix=/usr \
-		--mandir=\$${prefix}/share/man \
-		--infodir=\$${prefix}/share/info \
+override_dh_auto_configure:
+	dh_auto_configure -- \
 		--enable-mysql \
 		--enable-pgsql \
 		--enable-mail \
@@ -43,86 +12,15 @@ endif
 		--enable-gssapi-krb5 \
 		--enable-gnutls \
 		--enable-relp \
-		--disable-testbench \
-		CFLAGS="$(CFLAGS)"
+		--disable-testbench
 
-
-build: build-stamp
-
-build-stamp: config.status
-	dh_testdir
-
-	# Add here commands to compile the package.
-	$(MAKE)
-
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp 
-
-	# Add here commands to clean up after the build process.
-	[ ! -f Makefile ] || $(MAKE) distclean
-	rm -f config.sub config.guess
-
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_prep
-
-	# Add here commands to install the package into debian/rsyslog.
-	$(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
-
+override_dh_auto_install:
+	dh_auto_install
 	install --mode=644 -D plugins/ommysql/createDB.sql debian/rsyslog-mysql/usr/share/dbconfig-common/data/rsyslog-mysql/install/mysql
 	install --mode=644 -D plugins/ompgsql/createDB.sql debian/rsyslog-pgsql/usr/share/dbconfig-common/data/rsyslog-pgsql/install/pgsql
 
-# Build architecture-independent files here.
-binary-indep: DH_OPTIONS=-i
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_installchangelogs
-	dh_installdocs
-	dh_installexamples
-	dh_install
-	dh_link
-	dh_lintian
-	dh_compress -X .conf
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+override_dh_compress:
+	dh_compress -X rsyslog-example.conf
 
-# Build architecture-dependent files here.
-binary-arch: DH_OPTIONS=-a
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_installchangelogs
-	dh_installdocs
-	dh_installexamples
-	dh_installlogcheck
-	dh_install
-	dh_installlogrotate
+override_dh_installinit:
 	dh_installinit -R -- start 10 2 3 4 5 . start 30 0 6 . stop 90 1 .
-	dh_installman
-	dh_installdebconf
-	dh_link
-	dh_lintian
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
